--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   get_it: ^7.7.0
   provider: ^6.1.2
   flutter_animate: ^4.5.0
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.10+1
+  skeletonizer: ^1.4.1+1
+  syncfusion_flutter_charts: ^26.2.7
+  http: ^1.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
