--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tm_assessment
-description: "A new Flutter project."
+description: "For TM (Telekom Malaysia) mobile developer job application task assessment purpose."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -43,11 +43,24 @@ dependencies:
   skeletonizer: ^1.4.1+1
   syncfusion_flutter_charts: ^ 25.2.4
   http: ^1.2.2
-  intl: ^0.19.0
+  intl: ^0.18.0
+  flutter_cache_manager: ^3.4.0
+  hive_flutter: ^1.1.0
+  flutter_moving_background: ^0.0.5
+  iconly: ^1.0.1
+  google_fonts: ^6.2.0
+  animated_segmented_tab_control: ^2.0.0
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "asset/tm.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -69,8 +82,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - asset/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
